force-app/main/default/objects/TechIP_Transaction_Patent__c/TechIP_Transaction_Patent__c.object-meta.xml
<CustomObject>
    <label>TechIP Transaction Patent</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>TechIP Transaction Patent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TechIP Transaction Patents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>