force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <formula>TEXT(Patent__r.Jurisdiction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jurisdiction</label>
    <type>Text</type>
</CustomField>