force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <label>Patent Number</label>
    <referenceTo>Patent__c</referenceTo>
    <relationshipName>TIP_Transaction_Patents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>