force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/Patent_Strength__c.field-meta.xml
<CustomField>
    <fullName>Patent_Strength__c</fullName>
    <formula>Patent__r.Patent_Strength__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patent Strength</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>