force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/SEP_Declaration__c.field-meta.xml
<CustomField>
    <fullName>SEP_Declaration__c</fullName>
    <formula>Patent__r.SEP_Declaration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEP Declaration</label>
    <type>Checkbox</type>
</CustomField>