force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/SEP_SSO_Licensing_Policy__c.field-meta.xml
<CustomField>
    <fullName>SEP_SSO_Licensing_Policy__c</fullName>
    <formula>Patent__r.SEP_SSO_Licensing_Policy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEP SSO Licensing Policy</label>
    <type>Checkbox</type>
</CustomField>