force-app/main/default/objects/TechIP_Transaction_Patent__c/fields/TIP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TIP_Transaction__c</fullName>
    <label>TIP Transaction</label>
    <referenceTo>TechIP_Transaction__c</referenceTo>
    <relationshipName>TIP_Transaction_Patents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>